Closed
Bug 258110
Opened 21 years ago
Closed 21 years ago
getShellService() doesn't return null on OS X / Default browser box is shown on OS X
Categories
(Firefox :: Shell Integration, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: asaf, Assigned: p_ch)
References
()
Details
(Keywords: fixed-aviary1.0, regression)
Attachments
(1 file)
|
1.39 KB,
patch
|
bryner
:
review+
bugs
:
approval-aviary+
|
Details | Diff | Splinter Review |
*** Regression from bug 256029 ***
The try block in getShellSerivce (see URL) doesn't fail on OS X.
js console output:
[xpconnect wrapped nsIShellSerivce]
As a result, the Default Browser box is shown on mac (and of course (1) It
doesn't work (2) the window size is wrong)
| Reporter | ||
Updated•21 years ago
|
Flags: blocking-aviary1.0PR?
Comment 1•21 years ago
|
||
-> pch
we can't ship with this, so fixing now is really critical
Assignee: mconnor → p_ch
Flags: blocking-aviary1.0PR? → blocking-aviary1.0PR+
| Assignee | ||
Comment 2•21 years ago
|
||
The Shell Service for Mac is an empty shell, and as said bryner, let's remove
it.
| Assignee | ||
Updated•21 years ago
|
Attachment #157962 -
Flags: review?(bryner)
Updated•21 years ago
|
Attachment #157962 -
Flags: review?(bryner) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #157962 -
Flags: approval-aviary?
Comment 3•21 years ago
|
||
Comment on attachment 157962 [details] [diff] [review]
don't load the mac shell service
a=ben@mozilla.org
Attachment #157962 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 4•21 years ago
|
||
fixed on branch and trunk.
Please, verify it well :)
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 5•21 years ago
|
||
Thanks Pierre, it's ok now. but...:
I'm really not sure that is the fix we want. It's good enough as a workaround
for the upcomming release. but say I want to impl' parts of the shell service on
mac (e.g. set as wallpaper) or other platforms that do not have a
nsIShellService implementation, must I impl' set default browser (or anything
else that will be shown per getShellService result) as well!?
Comment 6•21 years ago
|
||
if you're going to enable shellservice for Mac at some point, then you do want
to enable set as default browser (otherwise you have to open Safari, iirc).
That's something that we do need/want.
In any case, this is the right fix until that happens.
Updated•21 years ago
|
Keywords: fixed-aviary1.0
| Reporter | ||
Updated•20 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•