Bug 258110: getShellService() doesn't return null on OS X / Default browser box is shown on OS X. Do not load the Shell Service on Mac + typo correction. r=bryner, a=ben.